2008-05-27  Nestor Salceda  <nestor.salceda@gmail.com>

	* gendarme.xsd: Added the applyTo section for allowing to apply rules to
	different visibility scenarios.

2008-05-25  Sebastien Pouliot  <sebastien@ximian.com>

	* XmlResultWriter.cs: Fix sorting

2008-05-18  Sebastien Pouliot  <sebastien@ximian.com> 

	* console.mdp: Refer to System.Xml.Linq from GAC (not local). 
	Embed gendarme.xsd as a resource (like the Makefile does).
	* Settings.cs: Be more explicit if we don't find gendarme.xsd.

2008-05-18  Sebastien Pouliot  <sebastien@ximian.com>

	* TextResultWriter.cs: Use String.IsNullOrEmpty (self-test)
	* XmlResultWriter.cs: Use String.IsNullOrEmpty (self-test)

2008-05-18  Andres G. Aragoneses <aaragoneses@novell.com> 

	* console.mdp: Fix build.

2008-05-16  Sebastien Pouliot  <sebastien@ximian.com>

	* Settings.cs: Change GetXsdStream to static (self-test).

2008-05-14  Jb Evain  <jbevain@novell.com>

	* XmlResultWriter.cs: use Linq to XML to generate the report.
	* Makefile.am: reference System.Xml.Linq.

2008-05-11  Sebastien Pouliot  <sebastien@ximian.com>

	* XmlResultWriter.cs: Split large Write method.

2008-05-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* TextResultWriter.cs: Split large Write method. Also avoid reporting
	both target and location when they are identical.

2008-05-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* gendarme.csproj: Embed gendarme.xsd as a resource inside the 
	assembly.
	* gendarme.xsd: Fix typos.

2008-04-25  Sebastien Pouliot  <sebastien@ximian.com> 

	* gendarme.xsl: Output HTML as UTF-8

2008-04-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* Settings.cs: Added support for allowing set properties from the XML
	file.

2008-04-15  Nestor Salceda  <nestor.salceda@gmail.com>

	* Makefile.am: Added gendarme.xsd as resource.
	* Settings.cs: Added validation against the xsd file.
	* ConsoleRunner.cs: Report errors produced by the xml configuration
	file.